# beobservant

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPERS.md  LICENSE  Makefile  NOTICE.md  PITCH.md  README.md  USER GUIDE.md  USER_GUIDE.md  conftest.py  docker-compose.prod.yml  docker-compose.stable.yml  docker-compose.yml  download.sh  fresh.sh  install.py  installer.sh  mypy.ini  pylint_out.txt  pyproject.toml
.github/workflows/: ci.yml  publish-images.yml  ui-ci.yml
BeGateway/: main.py
BeGateway/routers/: gateway_router.py
BeGateway/services/: gateway_service.py  rate_limit.py
BeGateway/tests/: conftest.py  test_gateway_backend_primitives.py  test_gateway_unit_edges.py  test_startup_checks.py
BeObservant/: config.py  database.py  db_models.py  main.py
BeObservant/middleware/: audit.py  concurrency_limit.py  dependencies.py  request_size_limit.py  resilience.py
BeObservant/services/: agent_service.py  becertain_proxy_service.py  benotified_proxy_service.py  database_auth_service.py  grafana_proxy_service.py  internal_service.py  loki_service.py  notification_service.py  system_service.py  tempo_service.py
BeObservant/tests/: test_agent_service.py  test_alertmanager_agents_audit_edges.py  test_alerts_helpers_edges.py  test_api_keys.py  test_audit_compliance_features.py  test_auth_cookie_flags.py  test_auth_ops_more.py  test_auth_router_edges.py  test_auth_security_policies.py  test_base_proxy_helpers.py  test_becertain_and_loki_router_edges.py  test_becertain_proxy_service.py  test_becertain_router.py  test_benotified_proxy_tenant_isolation.py  test_config_edges.py  test_config_security.py  test_dashboard_ops_sync.py  test_database_and_token_schema_edges.py  test_database_auth_and_helper_edges.py  test_database_auth_bootstrap_helpers.py  test_database_auth_mfa_oidc_helpers.py  test_database_auth_service_delegation.py  test_datasource_org_scope_user_owned_keys.py  test_dependencies_edges.py  test_folder_scope_ops.py  test_folder_update_errors.py  test_grafana_helper_modules.py  test_grafana_proxy_service.py  test_grafana_router_edges.py  test_group_ops_prune.py  test_loki_service.py  test_main_entrypoint_edges.py  test_middleware_core_edges.py  test_primitives_edges.py  test_proxy_and_notification_edges.py  test_proxy_auth_ops.py  test_route_workflow_regressions.py  test_system_helpers.py  test_tempo_router_service_edges.py  test_ttl_cache_edges.py
charts/observantio/: Chart.yaml  README.md  api_proxy.py  installer.sh  values-compact.yaml  values-production.yaml  values.yaml
configs/: alertmanager.yaml  grafana-proxy.conf  loki.yaml  mimir-s3.yaml  mimir.yaml  otel-agent.yaml  otel-ingester.yaml  otlp-gateway.conf  prometheus.yaml  tempo.yaml
configs/grafana/: grafana-datasource.yaml
configs/rules/: alerts.yaml
deployments/: README.md
deployments/compose/: docker-compose.stable.yml
deployments/eks/: deployment.yaml
deployments/env/: production.env.required
deployments/swarm/: docker-swarm.yaml
gatekeeper/: .dockerignore  README.md  __init__.py  config.py  main.py  openapi.json  openapi.yaml  settings.py  start.py
gatekeeper/middleware/: __init__.py  openapi.py  runtime_ssl.py
gatekeeper/models/: __init__.py  exceptions.py
gatekeeper/routers/: __init__.py  gateway_router.py
gatekeeper/services/: __init__.py  gateway_service.py  rate_limit.py
gatekeeper/tests/: conftest.py  test_config_security.py  test_gateway_backend_primitives.py  test_gateway_rate_limit.py  test_gateway_unit_edges.py  test_lifespan_non_blocking.py  test_openapi_middleware.py  test_regression_gateway_validate_upstream_path_workflow.py  test_start_bootstrap.py  test_startup_checks.py
gateway-auth-service/: Dockerfile  db_models.py  main.py  requirements.txt
gateway-auth-service/routers/: gateway_router.py
gateway-auth-service/services/: config.py  gateway_service.py  rate_limit.py  token_cache.py
gateway-auth-service/tests/: test_config_security.py  test_gateway_rate_limit.py  test_lifespan_non_blocking.py  test_startup_checks.py
otel/: OTEL.md  README.md  logs.py  run_otel_collector.sh  traces.py
otel/configs/: ojo.yaml  otel-agent.yaml  otelcollector.yaml
release/: README.md  install.sh  release-image.workflow-template.yml  restart.sh  uninstall.sh  versions.json
scripts/: README.md  render-observability-config.sh  run_global_mutations.sh  run_global_mypy.sh  run_global_pylint.sh  run_global_pytests.sh  run_optimal_config.sh  run_schemathesis.sh  run_schemathesis_full_stack.sh  run_schemathesis_gatekeeper_only.sh  run_schemathesis_notifier_only.sh  run_schemathesis_resolver_only.sh  run_schemathesis_watchdog_only.sh
server/: Dockerfile  __init__.py  config.py  database.py  db_models.py  entrypoint.sh  main.py  requirements.txt
server/middleware/: __init__.py  audit.py  auth.py  auth_deps.py  dependencies.py  error_handlers.py  limits.py  rate_limit.py  resilience.py
server/models/: __init__.py  agent_models.py  alertmanager_models.py  auth_models.py  grafana_models.py  loki_models.py  tempo_models.py
server/routers/: __init__.py  agents_router.py  alertmanager_router.py  auth_router.py  gateway_router.py  grafana_router.py  internal_router.py  loki_router.py  system_router.py  tempo_router.py
server/services/: __init__.py  agent_service.py  alertmanager_service.py  audit_context.py  auth_service.py  becertain_proxy_service.py  benotified_proxy_service.py  database_auth_service.py  gateway_service.py  grafana_proxy_service.py  grafana_service.py  grafana_user_sync_service.py  jira_service.py  loki_service.py  (+8 more)
tests/: .dockerignore  README.md  generator.sh  logs.py  logs.sh  routes_edge_cases.sh  start.sh  traces.py  traces.sh
ui/: .env.example  .eslintrc.json  Dockerfile  README.md  eslint.config.cjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
watchdog/: Dockerfile  README.md  __init__.py  config.py  database.py  db_models.py  main.py  openapi.json  openapi.yaml  requirements.txt
(+704 files in other folders)
