[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "observantio"
version = "0.0.1"
description = "Observantio mono-repo shared developer tooling and test dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Observantio" }]
keywords = ["observability", "lgtm", "fastapi", "telemetry", "grafana"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/observantio/watchdog"
Documentation = "https://observantio.github.io/pitch"
Changelog = "https://github.com/observantio/watchdog/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "types-psutil",
  "pylint>=3.3.0",
  "ruff>=0.9.0",
  "pre-commit>=4.3.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "pytest-asyncio>=1.3.0",
  "observantio[resolver]",
]

schemathesis = [
  "schemathesis>=4.14.2,<5",
]

shared-backend = [
  "fastapi>=0.129.0",
  "starlette>=0.49.1",
  "httpx>=0.27.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.11.0",
  "sqlalchemy>=2.0.25",
  "uvicorn>=0.27.1",
  "python-multipart>=0.0.22",
  "cryptography>=46.0.5",
  "pyjwt[crypto]>=2.10.1",
  "passlib>=1.7.4",
  "bcrypt>=3.2.0",
  "email-validator>=2.1.0",
  "aiosmtplib>=1.1.6",
  "redis>=5.0.8",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "tenacity>=8.2.2",
  "pyyaml>=6.0.2",
  "pyotp>=2.8.0",
  "hvac>=2.0.0",
]

watchdog = [
  "observantio[shared-backend]",
  "python-jose>=3.3.0",
  "psutil>=5.9.8",
  "types-psutil>=5.9.5.20240516",
  "protobuf>=4.22.0",
  "opentelemetry-proto>=1.15.0",
]

gatekeeper = [
  "fastapi>=0.129.0",
  "httpx>=0.27.0",
  "pydantic>=2.12.5",
  "sqlalchemy>=2.0.25",
  "uvicorn>=0.27.1",
  "redis>=5.0.8",
]

notifier = [
  "observantio[shared-backend]",
  "types-pyyaml>=6.0.12.20250915",
]

resolver = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyjwt>=2.10.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
  "scikit-learn>=1.5.0",
  "sqlalchemy>=2.0.25",
  "psycopg2-binary>=2.9.9",
  "redis>=5.0.0",
]

test = ["observantio[dev,watchdog,gatekeeper,notifier,resolver]"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["resolver/tests", "gatekeeper/tests", "notifier/tests", "watchdog/tests"]
addopts = "-q"
pythonpath = ["resolver", "gatekeeper", "notifier", "watchdog"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning:pydantic\\..*",
  "ignore::DeprecationWarning:starlette\\..*",
]

[tool.coverage.run]
branch = true
omit = ["tests/*", "ui/*", "showcase/*"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "PTH", "RUF", "ERA", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["resolver", "gatekeeper", "notifier", "watchdog"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
implicit_reexport = false
explicit_package_bases = true
exclude = [
  "^(ui|showcase|configs|build|dist|venv|\\.venv|__pycache__)/",
  "^(watchdog|gatekeeper|notifier|resolver)/tests/",
  # `run_global_mypy.sh` runs `mypy` from each service directory; paths are `tests/...`, not `<service>/tests/`.
  "^tests/",
]

[[tool.mypy.overrides]]
module = ["requests.*", "setuptools.*"]
ignore_missing_imports = true

[tool.pylint.main]
jobs = 1
extension-pkg-allow-list = ["sqlalchemy", "sqlalchemy.orm"]
ignore = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "venv", "node_modules", "build", "dist", "tmp", "vendor"]
ignore-paths = [
  "^\\./?(?:resolver|gatekeeper|notifier|watchdog)/tests/.*$",
  "^\\./?(?:ui|showcase)/.*$",
]
init-hook = """
import os
import sys
root = os.getcwd()
path_first = (os.environ.get('PYLINT_PATH_FIRST') or '').strip()
services = ('resolver', 'gatekeeper', 'notifier', 'watchdog')
ordered = []
if path_first in services:
    ordered.append(path_first)
    for name in services:
        if name != path_first:
            ordered.append(name)
else:
    ordered = list(services)
for svc in reversed(ordered):
    path = os.path.join(root, svc)
    if path not in sys.path:
        sys.path.insert(0, path)
"""

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-locals",
  "too-many-branches",
]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 800

[tool.pylint.design]
max-args = 6
max-positional-arguments = 6
max-attributes = 35
max-public-methods = 25
max-returns = 10
max-nested-blocks = 5
max-statements = 80
min-public-methods = 0

[tool.pylint.basic]
variable-naming-style = "snake_case"
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
const-naming-style = "UPPER_CASE"
class-const-naming-style = "UPPER_CASE"

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.hatch.build.targets.wheel]
packages = ["watchdog", "gatekeeper", "notifier", "resolver"]
