[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "observantio"
version = "0.0.5"
description = "Observantio mono-repo shared developer tooling and test dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Observantio" }]
keywords = ["observability", "lgtm", "fastapi", "telemetry", "grafana"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/observantio/watchdog"
Documentation = "https://observantio.github.io/pitch"
Changelog = "https://github.com/observantio/watchdog/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "types-psutil",
  "pylint>=3.3.0",
  "ruff>=0.9.0",
  "pre-commit>=4.3.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "pytest-asyncio>=1.3.0",
  "mutmut>=3.5.0",
  "vulture>=2.0.0",
  "observantio[resolver]",
]

schemathesis = [
  "schemathesis>=4.14.2,<5",
]

shared-backend = [
  "fastapi>=0.129.0",
  "starlette>=0.49.1",
  "httpx>=0.27.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.11.0",
  "sqlalchemy>=2.0.25",
  "uvicorn>=0.27.1",
  "python-multipart>=0.0.22",
  "cryptography>=46.0.5",
  "pyjwt[crypto]>=2.10.1",
  "passlib>=1.7.4",
  "bcrypt>=3.2.0",
  "email-validator>=2.1.0",
  "aiosmtplib>=1.1.6",
  "redis>=5.0.8",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "tenacity>=8.2.2",
  "pyyaml>=6.0.2",
  "pyotp>=2.8.0",
  "hvac>=2.0.0",
]

watchdog = [
  "observantio[shared-backend]",
  "python-jose>=3.3.0",
  "psutil>=5.9.8",
  "types-psutil>=5.9.5.20240516",
  "protobuf>=4.22.0",
  "opentelemetry-proto>=1.15.0",
]

gatekeeper = [
  "fastapi>=0.129.0",
  "httpx>=0.27.0",
  "pydantic>=2.12.5",
  "sqlalchemy>=2.0.25",
  "uvicorn>=0.27.1",
  "redis>=5.0.8",
]

notifier = [
  "observantio[shared-backend]",
  "types-pyyaml>=6.0.12.20250915",
]

resolver = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyjwt>=2.10.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
  "scikit-learn>=1.5.0",
  "sqlalchemy>=2.0.25",
  "psycopg2-binary>=2.9.9",
  "redis>=5.0.0",
]

test = ["observantio[dev,watchdog,gatekeeper,notifier,resolver]"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["resolver/tests", "gatekeeper/tests", "notifier/tests", "watchdog/tests"]
addopts = "-q"
pythonpath = ["resolver", "gatekeeper", "notifier", "watchdog"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning:pydantic\\..*",
  "ignore::DeprecationWarning:starlette\\..*",
  "ignore:unclosed database in <sqlite3\\.Connection object.*:ResourceWarning",
  "ignore::ResourceWarning",
]

[tool.mutmut]
paths_to_mutate = [
  "resolver/api/routes",
  "resolver/services",
  "resolver/datasources",
  "resolver/connectors",
  "resolver/store",
  "resolver/middleware",
  "gatekeeper/routers",
  "gatekeeper/middleware",
  "gatekeeper/services",
  "notifier/middleware",
  "notifier/routers/observability/alerts",
  "notifier/routers/observability/incidents.py",
  "notifier/routers/observability/jira",
  "notifier/services/common",
  "notifier/services/notification",
  "notifier/services/alerting",
  "notifier/services/storage",
  "notifier/services/jira_service.py",
  "notifier/services/storage/revocation.py",
  "watchdog/routers",
  "watchdog/services",
  "watchdog/middleware",
]
tests_dir = [
  "resolver/tests",
  "gatekeeper/tests",
  "notifier/tests",
  "watchdog/tests",
]
do_not_mutate = [
  "*/tests/*",
  "*/mutants/*",
  "*/openapi.json",
  "*/openapi.yaml",
  "*/assets/*",
  "*/configs/*",
  "*/templates/*",
  "*/migrations/*",
]
pytest_add_cli_args = ["-q"]
mutate_only_covered_lines = true

[tool.observantio.mutmut_profiles.defaults]
do_not_mutate = [
  "*/tests/*",
  "*/mutants/*",
  "*/openapi.json",
  "*/openapi.yaml",
  "*/assets/*",
  "*/configs/*",
  "*/templates/*",
  "*/migrations/*",
]
pytest_add_cli_args = ["-q"]

[tool.observantio.mutmut_profiles.resolver]
paths_to_mutate = [
  "config.py",
  "database.py",
  "db_models.py",
  "custom_types/__init__.py",
  "custom_types/json.py",
  "api/requests/__init__.py",
  "api/requests/_time_range.py",
  "api/requests/analyze.py",
  "api/requests/correlation.py",
  "api/requests/events.py",
  "api/requests/logs.py",
  "api/requests/metrics.py",
  "api/requests/slo.py",
  "api/requests/topology.py",
  "api/requests/traces.py",
  "api/responses/__init__.py",
  "api/responses/jobs.py",
  "api/routes/analyze.py",
  "api/routes/causal.py",
  "api/routes/common.py",
  "api/routes/correlation.py",
  "api/routes/events.py",
  "api/routes/exception.py",
  "api/routes/forecast.py",
  "api/routes/health.py",
  "api/routes/jobs.py",
  "api/routes/logs.py",
  "api/routes/metrics.py",
  "api/routes/ml.py",
  "api/routes/slo.py",
  "api/routes/topology.py",
  "api/routes/traces.py",
  "services/analyze_service.py",
  "services/analysis_config_service.py",
  "services/rca_job_service.py",
  "services/security_service.py",
  "engine/__init__.py",
  "engine/events/__init__.py",
  "engine/events/models.py",
  "engine/events/registry.py",
  "engine/enums.py",
  "store/client.py",
  "store/events.py",
  "store/granger.py",
  "store/keys.py",
  "store/weights.py",
]
tests_dir = ["tests/test_route_exception_wrapper.py"]
also_copy = [
  "api",
  "connectors",
  "services",
  "engine",
  "custom_types",
  "datasources",
  "store",
  "config.py",
  "database.py",
  "db_models.py",
]
pytest_add_cli_args_test_selection = [
  "tests/test_route_exception_wrapper.py",
]
mutate_only_covered_lines = true
debug = true

[tool.observantio.mutmut_profiles.gatekeeper]
paths_to_mutate = ["routers/gateway_router.py"]
tests_dir = ["tests"]
also_copy = [
  "routers",
  "services",
  "middleware",
  "models",
  "settings.py",
  "main.py",
  "start.py",
]
mutate_only_covered_lines = false

[tool.observantio.mutmut_profiles.notifier]
paths_to_mutate = [
  "custom_types/json.py",
  "models/access/auth_models.py",
  "middleware/dependencies.py",
  "middleware/error_handlers.py",
  "middleware/headers.py",
  "middleware/request_size_limit.py",
  "middleware/resilience.py",
  "middleware/rate_limit/hybrid.py",
  "middleware/rate_limit/in_memory.py",
  "middleware/rate_limit/ip.py",
  "middleware/rate_limit/models.py",
  "middleware/rate_limit/redis_fixed_window.py",
  "routers/observability/alerts/access.py",
  "services/common/__init__.py",
  "services/common/access.py",
  "services/common/encryption.py",
  "services/common/http_client.py",
  "services/common/meta.py",
  "services/common/pagination.py",
  "services/common/tenants.py",
  "services/common/url_utils.py",
  "services/common/visibility.py",
  "services/secrets/provider.py",
  "services/secrets/vault_client.py",
]
tests_dir = ["tests/test_url_utils.py"]
also_copy = [
  "routers",
  "services",
  "middleware",
  "models",
  "custom_types",
  "templates",
  "config.py",
  "database.py",
  "db_models.py",
  "main.py",
]
pytest_add_cli_args_test_selection = ["tests/test_url_utils.py"]
do_not_mutate = [
  "*/tests/*",
  "*/mutants/*",
  "*/openapi.json",
  "*/openapi.yaml",
  "*/assets/*",
  "*/configs/*",
  "*/migrations/*",
]
mutate_only_covered_lines = true

[tool.observantio.mutmut_profiles.watchdog]
paths_to_mutate = [
  "routers/access/auth_router/api_keys.py",
  "routers/access/auth_router/authentication.py",
  "routers/observability/grafana_router/dashboards.py",
  "services/grafana/proxy_path_permissions.py",
  "routers/observability/resolver_router.py",
]
also_copy = [
  "routers",
  "services",
  "middleware",
  "models",
  "custom_types",
  "config.py",
  "database.py",
  "db_models.py",
  "main.py",
]
pytest_add_cli_args_test_selection = [
  "tests/test_auth_security_policies.py",
  "tests/test_auth_helper_more.py",
  "tests/test_database_auth_and_helper_edges.py",
  "tests/test_database_auth_service_delegation.py",
  "tests/test_folder_scope_ops.py",
  "tests/test_grafana_service_org_scope.py",
  "tests/test_dashboard_ops_helpers_gap.py",
  "tests/test_dashboard_ops_gap_closure.py",
  "tests/test_dashboard_and_grafana_more_gap.py",
  "tests/test_regression_route_gap_workflows.py",
  "tests/test_resolver_router.py",
  "tests/test_grafana_router_edges.py",
  "tests/test_auth_router_edges.py",
]
mutate_only_covered_lines = true
debug = true

[tool.coverage.run]
branch = true
omit = ["tests/*", "ui/*", "showcase/*"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
fail_under = 100
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "PTH", "RUF", "ERA", "T20"]

[tool.ruff.lint.per-file-ignores]
"watchdog/config.py" = ["B010"]
"**/routers/**" = ["B008"]
"**/routes/**" = ["B008"]
"**/middleware/**" = ["B008"]
"**/tests/**" = ["B008", "E402"]
"watchdog/services/database_auth_service.py" = ["E402"]
"resolver/tests/test_anomaly_stats.py" = ["E402"]
"watchdog/services/auth/helper.py" = ["B008"]
"**/models/**" = ["N815"]

[tool.ruff.lint.isort]
known-first-party = [
  "resolver",
  "gatekeeper",
  "notifier",
  "watchdog",
  "config",
  "database",
  "db_models",
  "custom_types",
  "middleware",
  "models",
  "services",
]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
implicit_reexport = false
explicit_package_bases = true
exclude = [
  "^(ui|showcase|configs|build|dist|venv|\\.venv|__pycache__)/",
  "^(watchdog|gatekeeper|notifier|resolver)/tests/",
  "^(watchdog|gatekeeper|notifier|resolver)/mutants/",
  "^mutants/",
  "^\\.mutmut-cache/",
  "^mutation_tests/",
  # `run_global_mypy.sh` runs `mypy` from each service directory; paths are `tests/...`, not `<service>/tests/`.
  "^tests/",
]

[[tool.mypy.overrides]]
module = ["requests.*"]
ignore_missing_imports = true

[tool.pylint.main]
jobs = 4
extension-pkg-allow-list = ["sqlalchemy", "sqlalchemy.orm"]
ignore = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "venv", "node_modules", "build", "dist", "tmp", "vendor", "mutants"]
ignore-paths = [
  "^\\./?(?:resolver|gatekeeper|notifier|watchdog)/tests/.*$",
  "^\\./?(?:resolver|gatekeeper|notifier|watchdog)/mutants/.*$",
  "^\\./?mutants/.*$",
  "^\\./?(?:ui|showcase)/.*$",
]
init-hook = """
import os
import sys
root = os.getcwd()
path_first = (os.environ.get('PYLINT_PATH_FIRST') or '').strip()
services = ('resolver', 'gatekeeper', 'notifier', 'watchdog')
ordered = []
if path_first in services:
    ordered.append(path_first)
    for name in services:
        if name != path_first:
            ordered.append(name)
else:
    ordered = list(services)
for svc in reversed(ordered):
    path = os.path.join(root, svc)
    if path not in sys.path:
        sys.path.insert(0, path)
"""

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-locals",
  "too-many-branches",
]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 800

[tool.pylint.design]
max-args = 5
max-positional-arguments = 4
max-attributes = 20
max-public-methods = 15
max-returns = 5
max-nested-blocks = 5
max-statements = 50
min-public-methods = 0

[tool.pylint.basic]
variable-naming-style = "snake_case"
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
const-naming-style = "UPPER_CASE"
class-const-naming-style = "UPPER_CASE"

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.hatch.build.targets.wheel]
packages = ["watchdog", "gatekeeper", "notifier", "resolver"]
